# comsic-app-focus

./: Cargo.toml  README.md
data/applications/: com.system76.CosmicAppFocusApplet.desktop
src/: focus.rs  lib.rs  main.rs
src/applet/: config.rs  mod.rs
